--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,20 +1,19 @@
-{% extends 'base.html' %}
-
+{% extends "base.html" %} 
 
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html>
+    <head>
+    </head>
+    <body>
+<div>
     <h1>Ubermelon's Most Loved Melons</h1>
-    <img src="melons.jpg">
-    <form>
+    <img src="https://www.levarht.com/wp-content/uploads/2018/05/25-Cantaloupe-800x674.png" height="300"
+    width="237" alt="Sexy Cantaloupe" class=center>
+    <form action="/get-name" method="get">
         <label>Name:</label>
-        <input type=name required= "true" method = 'GET'>
+        <input type=name required="true">
+        <input type="submit" value="Submit">
     </form>
-    
+</div>    
 </body>
 </html>
