--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,11 @@
+
+
 img {
   height: 200px;
   width: 200px;
+
+  border: solid 1px green;
+
 }
 
 .melon-div {
@@ -8,3 +13,9 @@ img {
   padding: 10px;
   width: 205px;
 }
+
+h1 {
+  font-family: sans-serif;
+}
+
+body {background-color: coral;}
