--- a/templates/top-melons.html
+++ b/templates/top-melons.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-
+{% extends "base.html" %} 
 
 <!doctype html>
 <html>
@@ -10,8 +9,7 @@
 <body>
   <!-- Create a div for every Most Loved Melon using a Jinja for-loop -->
 
-
-{ % block content %}
+<div class="melon-div"></div>
 <h1>Welcome, {{username}} ! Nice to see you!</h1>
 
 {% for key, values in MOST_LOVED_MELONS.items() %}
@@ -19,14 +17,7 @@
   <div>This melon was loved: {{MOST_LOVED_MELONS[key]['num_loves']}} times</div>
   <div> <img src= {{MOST_LOVED_MELONS[key]['img']}} alt= melon image </div>
   {% endfor %}
-
-  <!-- <div class="melon-div">
-
-
-  <!-- <div class="melon-div">
-    <h3>Texas Golden Watermelon</h3>
-    <h2>Loved 598 times.</h2>
-    <img src="http://www.rareseeds.com/assets/1/14/DimThumbnail/Texas-Golden-2-Watermelon-web.jpg">
-  </div> -->
+  
 </body>
 </html>
+
