--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,11 @@
 
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" href="/static/css/style.css"
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+        <title>TOP MELONS</title>
+    </head>
+
+    <body>
+    </body>
 </html>
