--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,12 @@
-
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-        <title>TOP MELONS</title>
-    </head>
-
-    <body>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Top Melons</title>
+    <link rel="stylesheet" type="text/css" href="/static/styles.css" />
+  </head>
+  <body>
+    {% block content %} {% endblock %}
+  </body>
 </html>
